Colaboratory를 통해 생성됨

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMMzouUPDLr87d4DBHlR/k",
+      "authorship_tag": "ABX9TyOqyUwq5iiuWvmrgYj9cuSI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -72,14 +72,37 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"bye world\")"
+        "print(\"test world\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2cvp4q4N9Oqu",
-        "outputId": "988c4b78-5c90-43e1-d243-a1994e10e63b"
+        "outputId": "b98109e0-12e6-402d-e3c1-a2108275e1f9"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"test2 world\")"
+      ],
+      "metadata": {
+        "id": "M3S8bJf2_ojM",
+        "outputId": "c859bf53-edc9-4958-b5ad-0af02c366f0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": 2,
       "outputs": [
@@ -87,7 +110,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "bye world\n"
+            "test2 world\n"
           ]
         }
       ]
